# triton-to-pto

./: .dockerignore  .gitignore  README.md
.cursor/rules/: adding-kernels.md  ascend-camodel.md  build-pipeline.md  e2e-testing.md  kernel-naming.md  project-architecture.md  repo-ownership.md  temporary-artifacts.md
docker/: Dockerfile  README.md  configure_mlir_tool.sh  copy_triton_to_pto_deps.sh
docker/patches/: ptoas-llvm19.patch  triton-llvm19-branchop.patch  triton-llvm19-namedattr.patch  triton-llvm19-ops.patch  triton-llvm19-utility.patch
docker/scripts/: check_triton_llvm_hash.sh
mlir_tool/: CMakeLists.txt
mlir_tool/include/pto-mlir/Dialect/PTO/: PTODialect.h  PTODialect.td  PTOOps.td  PTOTypeDefs.td  PTOTypes.h
mlir_tool/lib/: CMakeLists.txt
mlir_tool/lib/Conversion/: CMakeLists.txt
mlir_tool/lib/Conversion/TritonToPTO/: CMakeLists.txt  TritonToPTO.cpp
mlir_tool/lib/Dialect/: CMakeLists.txt
mlir_tool/lib/Dialect/PTO/: CMakeLists.txt  PTODialect.cpp
mlir_tool/scripts/: build_llvm19.sh
mlir_tool/test/: README.md  e2e_all.sh  e2e_generated.pto  e2e_run_ptoas_sim.sh  e2e_triton_to_sim.sh  expand_pto_to_ptoas.py  lit.cfg.py  matmul_triton.mlir  reduce_sum_triton.mlir  scf_for_accumulate_triton.mlir  scf_for_load_accumulate_triton.mlir  softmax_triton.mlir  softmax_triton_style.pto  unary_exp_triton.mlir  vec_add_e2e_triton.mlir  vec_add_triton.mlir
mlir_tool/test/cpu_sim/: cpu_sim_run.py
mlir_tool/test/golden/: golden_check.py
mlir_tool/tools/: CMakeLists.txt
mlir_tool/tools/triton-to-pto-mlir/: CMakeLists.txt  triton-to-pto-mlir.cpp
